plugins {
    id 'org.jetbrains.kotlin.jvm' version '1.9.25'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'org.jetbrains.kotlin.plugin.jpa' version '1.9.25'
    id 'org.jlleitschuh.gradle.ktlint' version '11.5.0'
    id 'org.jetbrains.kotlinx.kover' version '0.7.3'
}

group = 'com.ingsis.Snippet'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}


repositories {
    mavenLocal()
    mavenCentral()
    maven {
        name = "GitHubPackages"
        url = uri("https://maven.pkg.github.com/austral-ingsis/class-redis-streams")
        credentials {
            username = System.getenv('USERNAME') ?: project.findProperty("gpr.user")
            password = System.getenv('TOKEN') ?: project.findProperty("gpr.key")
        }
    }
}

dependencies {

    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    implementation 'io.projectreactor.kotlin:reactor-kotlin-extensions'
    implementation 'io.netty:netty-resolver-dns-native-macos'
    implementation 'org.austral.ingsis:redis-streams-flux:0.1.13'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.jetbrains.kotlin:kotlin-reflect'
    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-reactor'

    annotationProcessor 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
    testImplementation 'org.postgresql:postgresql'
    testImplementation 'org.mockito.kotlin:mockito-kotlin:5.4.0'

    testImplementation 'org.amshove.kluent:kluent:1.73'
    testImplementation 'com.h2database:h2'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    runtimeOnly 'org.postgresql:postgresql'
}

kotlin {
    jvmToolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
    compilerOptions {
        freeCompilerArgs.addAll '-Xjsr305=strict'
    }
}

kover {
    useJacoco()
}

koverReport {
    verify {
        rule {
            bound {
                minValue = 80
            }
        }
        filters {
            excludes {
                packages("config")
                packages("health")
                packages("security")
                classes("com.ingsis.parse.Snippet.kt")
            }
        }
    }

    defaults {
        html {
            onCheck = true
        }
    }
}


ktlint {
    disabledRules = ['no-wildcard-imports', 'max-line-length']
}

test {
    jvmArgs("-XX:+EnableDynamicAgentLoading", "-Djdk.instrument.traceUsage", "-Xshare:off")
}

tasks.named('test') {
    useJUnitPlatform()
}